--- a/index.html
+++ b/index.html
@@ -4,23 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barbis</title>
-    <link rel="stylesheet" href="./css/estilo.css">
     <link rel="shortcut icon" href="./images/favicon.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/estilo.css">
+    <title>Barbis</title>
 </head>
 <body>
    <header>
-    <img src="./images/Logo.png" alt="logo" class="logo">
-    <nav class="menu">
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="./pages/nosotros.html">Nosotros</a></li>
-        <li><a href="./pages/programas.html">Programas</a></li>
-        <li><a href="./pages/contactanos.html">Contactanos</a></li>
-        <li><a href="./pages/iniciarsesion.html">Iniciar sesion</a></li>
-        <li><a href="./pages/registrate.html">Registrate</a></li>
-    </ul>
-   </nav>
+   <nav class="navbar navbar-dark navbar-expand-lg">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="./index.html"><img src="./images/Logo.png"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="./index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./pages/programas.html">Programas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./pages/contactanos.html">Contactanos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./pages/iniciarsesion.html">Iniciar Sesión</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./pages/registrate.html">Registrate</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 </header>  
    <main>
     <section class="correr">
@@ -72,5 +92,7 @@
                 <img src="./images/youtube.png" alt="youtube" class="youtube logo">
             </div>    
    </footer>
+   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
