--- a/index.html
+++ b/index.html
@@ -46,11 +46,7 @@
     <section class="correr">
     </section>
     <section class="info">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aperiam, officia consequatur non, provident earum veritatis ducimus excepturi quisquam hic quaerat, veniam voluptatem nesciunt eius rerum fugit animi ad nemo!
-        Quo, ipsam? Neque, rerum et. Pariatur suscipit deserunt aliquam a labore! Atque, accusantium tempora aperiam officia repellat nam tenetur facere perspiciatis nesciunt. Quae, in consequatur? Quia eius reprehenderit accusantium animi?
-        Adipisci, quod eum at sequi eveniet ad amet, corrupti praesentium magnam nihil dolores autem voluptates a quae nam officia distinctio itaque sunt voluptatibus dolor! Voluptatibus repellendus molestiae quo modi voluptatum?
-        Officia, ipsam iste cupiditate iusto consequatur eaque, vel hic nam, eius dicta alias cumque et voluptatum commodi expedita. Dignissimos iusto cumque ad illum? Aspernatur saepe quia sit architecto, similique harum.
-        Sit impedit magnam fugit eligendi eos eius quisquam laboriosam provident molestias ducimus aspernatur illo tenetur voluptate exercitationem nobis veniam corrupti aut quam, repudiandae, optio rem animi? Eius, molestiae! Possimus, nihil!</p>
+        <p>Valoramos tu salud! En Barbis estamos 100% abocados en ayudarte a llegar a tus metas. Quieras perder peso, ganar musculatura, mejorar tu estado fisico o solamente iniciar alguna actividad fisica, nosotros nos ocuparemos de sacar provecho a tu tiempo y dinero invertido en nosotros. Te ayudamos a a conseguir tus objetivos y progresar hacia un estilo de vida saludable, disfrutando del camino a través del plan mas conveniente a tus intereses. Entrenamiento seguro y efectivo al alcance de tu mano. Para cambiar es importante dejar aquello que ya no te sirve. En Barbis te acompañamos para que mejores tu rendimiento fisico a través de sesiones guiadas por un profesional deportivo que se adapta inegramente a tus necesidades y objetivos.</p>
         <img src="./images/hombrefeliz.jpg" alt="hombre" class="info-img">
     </section>
     <section class="video">
@@ -58,8 +54,7 @@
     </section>
     <section class="mas-info">
         <h3 class="mas-info-titulo">Empeza Ahora!</h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt excepturi eligendi magni officiis iste nostrum soluta mollitia, temporibus natus recusandae. Accusamus, voluptatibus hic? Laudantium officia minus excepturi libero nesciunt eveniet.
-        Mollitia iure sunt voluptas ipsam voluptatibus similique! Sint delectus ab sed, eum quam aliquid pariatur, corporis ad incidunt consequatur obcaecati ut temporibus! A provident repudiandae neque non dignissimos tenetur placeat.</p>
+        <p>Elige tu plan de entrenamiento de acuerdo a tus necesidades, metas y disponibilidad. Los planes están orientados a mejorar la composición corporal de cada alumno, y se encuentran disponibles tanto a hombres como mujeres. </p>
         <a href="./pages/registrate.html" class="mas-info-button">Mas info</a>
     </section>
     <div class="cambios">
