--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="entrenador personal, planes, entrenamiento, ejercicio fisico, cambio fisico, personalizado, peso, musculo, entrenador">
+    <meta name="description" content="Sigue un plan de entrenamiento adaptado a tu medida y consigue los objetivos que siempre has deseado gracias a este Curso a distancia (Online) de Planes de Entrenamiento. ¡Siempre es buen momento para sentirte mas saludable!">
     <link rel="shortcut icon" href="./images/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/estilo.css">
-    <title>Barbis</title>
+    <link rel="stylesheet" href="./css/estilos.css">
+    <title>Barbis | Entrenamiento online personalizado</title>
 </head>
 <body>
    <header>
@@ -58,7 +60,7 @@
         <a href="./pages/registrate.html" class="mas-info-button">Mas info</a>
     </section>
     <div class="cambios">
-        <img src="./images/antes y despues.jpg" alt="cambio" class="cambios-img" width="375xp">
+        <img src="./images/antes-y-despues.jpg" alt="cambio" class="cambios-img" width="375xp">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/3NfjCtmL-rU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
    </main>
