--- a/pages/iniciarsesion.html
+++ b/pages/iniciarsesion.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../images/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilo.css">
-    <title>Barbis</title>
+    <link rel="stylesheet" href="../css/estilos.css">
+    <title>Barbis | Entrenamiento online personalizado</title>
 </head>
 <body>
     <header>
@@ -42,7 +42,7 @@
          </div>
        </nav>
      </header>  
-   <body>
+   <main>
     <div class="login-container">
         <form action="" class="form-login">
             <ul class="login-nav">
@@ -69,7 +69,7 @@
         </form>
         <a href="#" class="login__forgot">¿Olvidó su contraseña?</a>
     </div>
-   </body>
+  </main>
    <footer>
     <form action="">
         <section> 
