--- a/pages/programas.html
+++ b/pages/programas.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="programas, planes, entrenamiento, peso, upper core, pesas, ejercicio, salud, resistencia, mejorar, cambios, cuerpo, musculatura, masa muscular, grasa">
     <link rel="shortcut icon" href="../images/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilo.css">
-    <title>Barbis</title>
+    <link rel="stylesheet" href="../css/estilos.css">
+    <title>Barbis | Entrenamiento online personalizado</title>
 </head>
 <body>
     <header>
@@ -64,7 +65,7 @@
                 <a href="../pages/iniciarsesion.html">Iniciar Sesión</a>
             </div>
             <div class="plan-4">
-                <img src="../images/Piernas.jpg" alt="">
+                <img src="../images/Piernas.jpg" alt="piernas">
                 <h4>Piernas y glúteos</h4>
                 <a href="../pages/iniciarsesion.html">Iniciar Sesión</a>
             </div>
